feat: 커스텀 구분자로 문자열 분리 추가